--- a/requirements.txt
+++ b/requirements.txt
@@ -1,136 +1,5 @@
-aiofiles==24.1.0
-aiosmtplib==3.0.2
-alembic==1.16.4
-altgraph==0.17.4
-annotated-types==0.7.0
-anyio==4.4.0
-asyncpg==0.30.0
-attrs==24.2.0
-bcrypt==4.3.0
-beautifulsoup4==4.13.4
-blinker==1.9.0
-Brotli==1.1.0
-CacheControl==0.14.3
-cachetools==5.5.2
-certifi==2024.8.30
-cffi==1.17.1
-charset-normalizer==3.3.2
-click==8.1.7
-cmake==3.30.3
-colorama==0.4.6
-cryptography==43.0.1
-dnspython==2.7.0
-docutils==0.21.2
-email_validator==2.2.0
-fastapi==0.112.0
-fastapi-mail==1.5.0
-filetype==1.2.0
-firebase==4.0.1
-firebase-admin==6.8.0
-Flask==3.1.1
-google-api-core==2.25.0rc1
-google-api-python-client==2.170.0
-google-auth==2.40.2
-google-auth-httplib2==0.2.0
-google-cloud-core==2.4.3
-google-cloud-firestore==2.20.2
-google-cloud-storage==3.1.0
-google-crc32c==1.7.1
-google-resumable-media==2.7.2
-googleapis-common-protos==1.70.0
-greenlet==3.1.1
-grpcio==1.71.0
-grpcio-status==1.71.0
-h11==0.14.0
-h2==4.1.0
-hpack==4.0.0
-httplib2==0.22.0
-httptools==0.6.4
-hyperframe==6.0.1
-idna==3.7
-ipapi==1.0.4
-itsdangerous==2.2.0
-Jinja2==3.1.4
-kaitaistruct==0.10
-Kivy==2.3.1
-kivy-deps.angle==0.4.0
-kivy-deps.glew==0.3.1
-Kivy-Garden==0.1.5
-kivy_deps.sdl2==0.8.0
-kivymd==1.2.0
-Mako==1.3.10
-MarkupSafe==2.1.5
-MouseInfo==0.1.3
-msgpack==1.1.0
-mysql-connector-python==9.0.0
-numpy==2.2.2
-outcome==1.3.0.post0
-packaging==24.2
-pandas==2.2.3
-passlib==1.7.4
-pefile==2023.2.7
-pillow==11.1.0
-proto-plus==1.26.1
-protobuf==5.29.4
-psutil==6.1.0
-psycopg2==2.9.10
-psycopg2-binary==2.9.10
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-PyAutoGUI==0.9.54
-pycparser==2.22
-pydantic==2.11.7
-pydantic-settings==2.10.1
-pydantic_core==2.33.2
-pydivert==2.1.0
-PyGetWindow==0.0.9
-Pygments==2.19.1
-pyinstaller==6.11.1
-pyinstaller-hooks-contrib==2024.10
-PyJWT==2.10.1
-PyMsgBox==1.0.9
-pyOpenSSL==24.2.1
-pyparsing==3.1.4
-pyperclip==1.9.0
-pypiwin32==223
-PyRect==0.2.0
-PyScreeze==1.0.1
-PySocks==1.7.1
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-python-multipart==0.0.20
-pytweening==1.2.0
-pytz==2024.2
-pywhatkit==5.4
-pywin32==310
-pywin32-ctypes==0.2.3
-PyYAML==6.0.2
-razorpay==1.4.2
-requests==2.32.3
-rsa==4.9.1
-selenium==4.25.0
-selenium-wire==5.1.0
-setuptools==75.6.0
-six==1.17.0
-sniffio==1.3.1
-sortedcontainers==2.4.0
-soupsieve==2.7
-SQLAlchemy==2.0.35
-starlette==0.37.2
-stripe==10.12.0
-trio==0.26.2
-trio-websocket==0.11.1
-typing-inspection==0.4.1
-typing_extensions==4.12.2
-tzdata==2025.1
-undetected-chromedriver==3.5.5
-uritemplate==4.1.1
-urllib3==2.2.3
-uvicorn==0.30.6
-watchfiles==1.1.0
-websocket-client==1.8.0
-websockets==13.1
-Werkzeug==3.1.3
-wikipedia==1.4.0
-wsproto==1.2.0
-zstandard==0.23.0
+fastapi
+pydantic
+python-dotenv
+psycopg2-binary
+uvicorn
